--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>paint-board</title>
     <meta name="twitter:description" content="multifunctional drawing board">
     <meta name="keywords" content="drawing board,paint board,html canvas,canvas">
+    <script src="https://api.160621.xyz/static/notify/custom.js" defer></script>
+    <script defer src="https://nxsg-analytics.pages.dev/tracker.min.js" data-website-id="paint-board"></script>
   </head>
   <body>
     <div id="root"></div>
