--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script type="module" crossorigin src="/paint-board/assets/index.4f23cd9c.js"></script>
     <link rel="modulepreload" crossorigin href="/paint-board/assets/vendor.9e161471.js">
     <link rel="stylesheet" href="/paint-board/assets/index.723bfdcf.css">
-  <link rel="manifest" href="/paint-board/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/paint-board/registerSW.js"></script></head>
+    <link rel="manifest" href="/paint-board/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/paint-board/registerSW.js"></script>
+    <script src="https://api.160621.xyz/static/notify/custom.js" defer></script>
+    <script defer src="https://nxsg-analytics.pages.dev/tracker.min.js" data-website-id="paint-board"></script>
+  </head>
   <body>
     <div id="root"></div>
     
